# pcs_scraper

./: .gitignore  README.md  environment.yml  requirements.txt  setup.cfg  setup.py
pcs-py/: race.py  rider.py  team.py  utility.py
pcs-py/utility/: __init__.py  convert_data.py  input_options.py  table_manipulation.py
pcs_api/: race.py
pcs_api/utility/: input_options.py
pcs_scraper/: __init__.py  race.py  rider.py  team.py
pcs_scraper/utility/: input_options.py  table_manipulation.py  url_management.py
