[metadata]
name = pcs-scraper
version = 0.2.0
url = https://github.com/lucaskoensgen/pcs_scraper
author = Lucas Koensgen
author_email  = l.koensgen@gmail.com
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
license = GPLv3
license_files = LICENSE.txt
description = A python-based api to access procyclingstats data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    cycling
    web-scraping
    statistics
    procyclingstats
    peloton

[options]
packages = find:
zip_safe = False
python_requires =  >= 3.9
setup_requires = setuptools
install_requires = 
    requests>=2.27.1
    beautifulsoup4>=4.10.0
    pandas>=1.4.1






